Function Order Management, this function allow user manage your's order

--- a/AppMilkteaShop/app/src/main/res/layout/activity_cart.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/activity_cart.xml
@@ -279,6 +279,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/profileBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -301,6 +302,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/cartBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -325,6 +327,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/supportBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -348,6 +351,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/settingBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
