--- a/AppMilkteaShop/app/src/main/res/layout/activity_order_detail.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/activity_order_detail.xml
@@ -3,12 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="milktea"
-            type="com.example.appmilkteashop.activity.MilkteaByCategoryActivity" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,10 +11,7 @@
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="690dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,22 +19,22 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/tvOrderDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:layout_marginBottom="16dp"
                     android:paddingStart="16dp"
-                    android:text="@{milktea.nameCate}"
+                    android:text="Order Detail"
                     android:textAlignment="viewStart"
                     android:textColor="#FF3D00"
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcViewMilktea"
+                    android:id="@+id/rcViewOrder"
                     android:layout_width="match_parent"
-                    android:layout_height="701dp" />
+                    android:layout_height="580dp" />
 
             </LinearLayout>
         </ScrollView>
@@ -96,7 +87,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/btnProfile"
+                        android:id="@+id/profileBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -119,7 +110,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/btnCartBottom"
+                        android:id="@+id/cartBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -144,7 +135,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/btnSupport"
+                        android:id="@+id/supportBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -168,7 +159,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/btnSetting"
+                        android:id="@+id/settingBtn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -196,4 +187,5 @@
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
